--- a/fadderanmalan/static/sass/components/m_job.sass
+++ b/fadderanmalan/static/sass/components/m_job.sass
@@ -2,6 +2,4 @@ body.mobile
     .job
         min-width: 94vw
         padding: 20px 30px
-
-    .job-title
-        // font-size: 16px
+        margin: 10px auto
