--- a/accounts/templates/admin/accounts/user/change_form.html
+++ b/accounts/templates/admin/accounts/user/change_form.html
@@ -1,8 +1,10 @@
 {% extends 'admin/change_form.html' %}
 
 {% block submit_buttons_bottom %}
-    <div class="submit-row">
-        <input type="submit" value="Login as user" name="_loginas">
-    </div>
+    {% if request.user.is_superuser %}
+        <div class="submit-row">
+            <input type="submit" value="Login as user" name="_loginas">
+        </div>
+    {% endif %}
     {{ block.super }}
 {% endblock %}
