--- a/templates/guide.html
+++ b/templates/guide.html
@@ -52,9 +52,7 @@
     <h4>Topplistan</h4>
     <p>
         <a href="{% url 'topchart:index' %}">Topplistan</a> agerar som ett sätt att både se ställningen mellan alla
-        faddrar samt som ett sätt för faddrar att hitta varandras profiler eftersom jag var för lat för att skriva
-        ett söksystem. Om du av någon anledning vill hitta till en fadders profil och du inte hittar dem i toplistan
-        är det lättast att bara ändra URL:en till dess liu-id.
+        faddrar samt som ett sätt för faddrar att hitta varandras profiler.
     </p>
 
     <h4>Kalender</h4>
