--- a/topchart/static/sass/topchart.sass
+++ b/topchart/static/sass/topchart.sass
@@ -1,34 +1,9 @@
 @import m_topchart
+@import d_topchart
+
 
 .topchart
-    display: flex
-    flex-direction: row
-    flex-wrap: wrap
-
-    align-items: flex-start
-
-    .userlink
-        margin: 0
-        border-bottom-left-radius: 0 !important
-        border-top-left-radius: 0 !important
-
-.topchart-counter
-    padding: 10px
-
-    margin-left: 15px
-    margin-bottom: 10px
-    font-weight: bold
-
-    display: inline-block
-    position: relative
-
-    right: -6px
-
-    border: 2px solid black
-    border-right: none
-    border-radius: 4px
-    border-top-right-radius: 0 !important
-    border-bottom-right-radius: 0 !important
+    max-width: 600px
 
 .topchart-search-form
     display: flex
@@ -37,3 +12,41 @@
 
     > *
         height: 45px
+
+.topchart-user-container
+    .topchart-user-motto
+        padding-bottom: .5rem
+
+    *
+        text-decoration: none !important
+
+    hr
+        margin-top: 0
+        margin-bottom: 1.5rem
+
+        position: relative
+
+        &:before
+            content: ""
+            position: absolute
+            width: 100%
+            height: 4px
+            bottom: 0
+            left: 0
+            background-color: #000
+            visibility: hidden
+            transform: scaleY(0)
+            transition: all 0.1s ease-in-out
+
+    &:hover
+        hr:before
+            visibility: visible
+            transform: scaleY(1)
+
+    .badge
+        background-color: #f5f5f5
+        box-shadow: 0 0 5px -3px black
+
+        border-radius: 5px
+        position: relative
+        top: -2px
