--- a/topchart/static/sass/m_topchart.sass
+++ b/topchart/static/sass/m_topchart.sass
@@ -8,3 +8,7 @@ body.mobile
             height: 80px
 
             margin-bottom: 10px
+
+    .topchart
+        max-width: unset
+        width: 100%
