Remove some annoying animations

--- a/fadderanmalan/static/sass/components/job.sass
+++ b/fadderanmalan/static/sass/components/job.sass
@@ -12,7 +12,7 @@
     overflow-y: hidden
     margin: 10px
     padding: 10px
-    transition: all .2s !important
+    transition: box-shadow .2s !important
     border-radius: 4px
     border: 2px solid black
     &:hover
