--- a/accounts/static/sass/components/userlink.sass
+++ b/accounts/static/sass/components/userlink.sass
@@ -9,7 +9,7 @@
     border: 2px solid black
     border-radius: 5px
 
-    transition: all .1s linear
+    transition: box-shadow .1s linear
 
     &:hover
         box-shadow: 0 1px 3px 0 #222
