Add fields User.points and User.placing
The point is to statically store these facts for easier usage and updating them in JobUser-signals. In the future I'll look into using async functions to update the placings, but synchronous will have to do for now.

--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -34,9 +34,9 @@
                 <i class="fas fa-user-shield" data-toggle="tooltip" data-placement="bottom"
                    title="Den här användaren är administratör"></i>
             {% endif %}
+            <span class="badge">#{{ user.placing }}</span> <span class="badge">{{ user.points }}<span class="lowercase">p</span></span>
             {{ user }}
         </h1>
-        <small>Poäng: {{ user.points }}<span class="lowercase">p</span></small>
     </div>
     <h2>Motto</h2>
     {% if user.motto %}
