--- a/fadderjobb/static/sass/base.sass
+++ b/fadderjobb/static/sass/base.sass
@@ -99,3 +99,12 @@ a
 .divider
     border: 2px solid black
     width: 94vw
+
+.badge
+    background-color: #f5f5f5
+    box-shadow: 0 0 5px -3px black
+
+    border-radius: 5px
+    position: relative
+    top: -2px
+    padding-right: .3rem
