Minor styling changes

--- a/fadderjobb/static/sass/base.sass
+++ b/fadderjobb/static/sass/base.sass
@@ -13,6 +13,9 @@ nav.navbar
     border: none
     padding: .5rem 1rem
 
+    *
+        user-select: none
+
 .nav-item
     display: flex !important
     margin: 0
@@ -108,3 +111,5 @@ a
     position: relative
     top: -2px
     padding-right: .3rem
+
+    user-select: none
