Minor convenience fixes

--- a/fadderanmalan/templates/components/job.html
+++ b/fadderanmalan/templates/components/job.html
@@ -29,6 +29,6 @@
         </div>
     </div>
     <div class="job-body">
-        {% if job.description %} - {{ job.description }} {% endif %}
+        {{ job.description }}
     </div>
 </a>
