--- a/fadderanmalan/templates/fadderanmalan/job_details.html
+++ b/fadderanmalan/templates/fadderanmalan/job_details.html
@@ -7,7 +7,6 @@
 {% block title %}{{ job.name }} - {% endblock title %}
 
 {% block head %}
-    <!--suppress HtmlUnknownTarget -->
     <link rel="stylesheet" href="{% sass_src 'sass/job_details.sass' %}">
     <link rel="stylesheet" href="{% sass_src 'sass/form.sass' %}">
     <link rel="stylesheet" href="{% sass_src 'sass/components/userlink.sass' %}">
@@ -35,6 +34,7 @@
                        data-toggle="tooltip" data-placement="bottom" title="Jobbet är låst">
                     </i>{{ " " }}
                 {% endif %}
+                <span class="badge">{{ job.points }}<span class="lowercase">p</span></span>
                 {{ job.name }}
             </h1>
             <small>
