--- a/fadderanmalan/templates/fadderanmalan/job_list.html
+++ b/fadderanmalan/templates/fadderanmalan/job_list.html
@@ -62,7 +62,7 @@
         {% filter_checkbox_component "Fullt" "filter-full" filter_full %}
         {% filter_checkbox_component "Faddrar vill lämna" "filter-leavequeue" filter_leavequeue %}
         {% filter_checkbox_component "Faddrar köar" "filter-enterqueue" filter_enterqueue %}
-        <button class="btn btn-primary filter-button" type="submit">Filtrera</button>
+        <button class="btn btn-primary filter-button" type="submit" id="filter-button" style="display: none;"></button>
     </form>
 
     <hr class="divider">
