--- a/fadderjobb/static/sass/base.sass
+++ b/fadderjobb/static/sass/base.sass
@@ -113,3 +113,9 @@ a
     padding-right: .3rem
 
     user-select: none
+
+.flex-line-break
+    flex-basis: 100%
+    height: 0 !important
+    margin: 0 !important
+    padding: 0 !important
