Add some helptext to edit_profile

--- a/accounts/templates/accounts/edit_profile.html
+++ b/accounts/templates/accounts/edit_profile.html
@@ -15,6 +15,6 @@
     <form class="edit-profile-form" action="{% url 'accounts:edit_profile' %}" method="post">
         {% csrf_token %}
         {{ form }}
-        <input type="submit" value="Uppdatera profil" class="btn btn-primary">
+        <input type="submit" value="Uppdatera profil" class="btn btn-primary" style="display: block;">
     </form>
 {% endblock content %}
